#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcFileIO
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-01
2015-09-16 David A. Schneider
- Initial checkin. Interface to File I/O in order to make Mock
  objects for testing.
